sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  var n = getNombreValeurs();
  var parcours = true;
  for(k<-0 ro n-1)) {
    parcours=false
    
  	for (i<-0 to n-2) {
    	if (getValeur(i)>getValeur(i+1)) {
      	echange(i,i+1)
        parcours=true
      }
      
    }
  n=n-1
  }
}